[package]
name = "reqests"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
incremental = true
lto = true
panic = "abort"
opt-level = 3

[dependencies]
clap = { version = "3.1.6", features = ["cargo", "derive"] }
comfy-table = "5.0.1"
futures = "0.3.21"
reqwest = { version = "0.11.9" }
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
