[package]
name = "reqests"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
incremental = true
lto = true
panic = "abort"
opt-level = 3

[dependencies]
clap = { version = "3.1.6", features = ["cargo", "derive"] }
bip0039 = "0.10.1"
rand = "0.8.5"
comfy-table = "5.0.1"
names = "0.13.0"
reqwest = { version = "0.11.9" }
scraper = "0.12.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
futures = "0.3.21"
lazy_static = "1.4.0"
